# callgraph

./: .gitignore  .pylintrc  LICENSE  Makefile  Pipfile  README.md  README.rst  callgraph-decorator-examples.ipynb  callgraph-magic-examples.ipynb  callgraph_test.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
callgraph/: __init__.py  decorator.py  extension.py  instrumentor.py  recorder.py
config/: ipython_config.py
docs/: Makefile  conf.py  index.rst
docs/source/: callgraph.rst  modules.rst
examples/: callgraph-decorator-examples.ipynb  callgraph-magic-examples.ipynb  levenshtein.py  nchoosek.py
